# mask-from-context-tokens

./: .gitignore
context-seg/: README.md  pyproject.toml
context-seg/configs/: autodl.yaml  autodl_hypersim_fast.yaml  default.yaml  local_smoke.yaml
context-seg/context_seg/: __init__.py  criterion.py  dataset.py  decoder.py  extractor.py  mask2former_lite.py  matcher.py  predictor.py  pseudo_masks.py  query_head.py  refinement.py  streaming_extractor.py  types.py
context-seg/scripts/: check_mask_dataset.py  download_hypersim_subset.py  evaluate.py  extract_tokens.py  generate_sam_masks.py  make_demo_segmentation.py  monitor_system.py  prepare_davis.py  prepare_hypersim.py  train.py
context-seg/tests/: test_dataset_matcher.py  test_interfaces.py  test_streaming_extractor.py
lingbot-map/: .gitignore  CODE_OVERVIEW_zh.md  demo.py
lingbot-map/benchmark/: evaluate.py  prepare.py  report.py  run.py  run_worker.py  viewer.py
lingbot-map/benchmark/configs/: kitti.yaml  oxford.yaml  oxford_long.yaml  seven_scenes.yaml
lingbot-map/benchmark/datasets/: general.py  kitti.py  oxford_spires.py  seven_scenes.py
lingbot-map/benchmark/envs/: install_all.sh  install_bench.sh  install_lingbot_map.sh
lingbot-map/benchmark/methods/: lingbot_map.py
lingbot-map/benchmark/sky_seg/: seg_sky.py
lingbot-map/lingbot_map/aggregator/: stream.py
lingbot-map/lingbot_map/layers/: flashinfer_cache.py
lingbot-map/lingbot_map/models/: gct_base.py  gct_stream.py
lingbot-map/preprocess/: oxford.py
lingbot-map/preprocess/points_visibility/: frustum_cull.cu  visibility.cpp  (+1 more)
(+35 files in other folders)
