[project]
name = "context-seg"
version = "0.1.0"
description = "Interface scaffold for instance segmentation from LingBot-Map context tokens"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "scipy",
    "torch",
    "tqdm",
    "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_seg*"]
